--- a/src/Aiursoft.CorpHome/Resources/Views/Home/Index.zh-HK.resx
+++ b/src/Aiursoft.CorpHome/Resources/Views/Home/Index.zh-HK.resx
@@ -75,6 +75,9 @@
   <data name="Aiursoft is dedicated to bringing the spirit of open-source and free software to every enterprise and individual." xml:space="preserve">
     <value>Aiursoft 致力於將開放原始碼及自由軟件的精神帶給每一個企業及個人。</value>
   </data>
+  <data name="Aiursoft is dedicated to bringing the spirit of Open-source and free software to every enterprise and individual." xml:space="preserve">
+    <value>Aiursoft 致力於將開放原始碼及自由軟件的精神帶給每間企業和個人。</value>
+  </data>
   <data name="Aiursoft Substratum Core" xml:space="preserve">
     <value>Aiursoft Substratum Core</value>
   </data>
@@ -89,6 +92,9 @@
   </data>
   <data name="Aiursoft Template is continuously optimized for the AI era, built with the most popular and reliable open-source technologies. It has already produced dozens of mature applications delivered to enterprises. Aiursoft uses Template to help businesses develop custom solutions based on their core needs." xml:space="preserve">
     <value>Aiursoft Template 持續優化以配合人工智慧時代，採用最流行及可靠的開源技術打造。它已成功開發出數十個成熟的應用程式，並交付予企業使用。Aiursoft 利用 Template 協助企業根據核心需求開發定制化解決方案。</value>
+  </data>
+  <data name="Aiursoft Template is continuously optimized for the AI era, built with the most popular and reliable Open-source technologies. It has already produced dozens of mature applications delivered to enterprises. Aiursoft uses Template to help businesses develop custom solutions based on their core needs." xml:space="preserve">
+    <value>Aiursoft Template 持續優化以配合 AI 時代，採用最流行且可靠的開源技術打造。此模板已成功開發出數十個成熟應用程式，並交付企業使用。Aiursoft 利用 Template 協助企業根據其核心需求開發定制化解決方案。</value>
   </data>
   <data name="Aiursoft Template is our definitive choice for enterprise projects! It&apos;s built for developers and is lightweight yet powerful. We can skip all the boilerplate for authentication and user management." xml:space="preserve">
     <value>Aiursoft Template 係我哋企業項目嘅不二之選！佢專為開發者打造，輕量之餘功能強大。我哋可以跳過所有驗證同用戶管理嘅樣板代碼。</value>
@@ -219,6 +225,9 @@
   <data name="Combine open-source tools on GitHub and Hugging Face — no enterprise licenses needed." xml:space="preserve">
     <value>結合 GitHub 和 Hugging Face 上的開源工具——無需企業授權。</value>
   </data>
+  <data name="Combine Open-source tools on GitHub and Hugging Face — no enterprise licenses needed." xml:space="preserve">
+    <value>結合 GitHub 和 Hugging Face 上的開源工具 —— 無需企業版授權</value>
+  </data>
   <data name="Comes with Docker support for simplified and consistent deployments." xml:space="preserve">
     <value>內建 Docker 支援，可簡化並確保部署的一致性。</value>
   </data>
@@ -251,6 +260,9 @@
   </data>
   <data name="Consistency Validation" xml:space="preserve">
     <value>一致性驗證</value>
+  </data>
+  <data name="Contact Sales" xml:space="preserve">
+    <value>聯絡銷售</value>
   </data>
   <data name="Contact Us" xml:space="preserve">
     <value>聯絡我們</value>
@@ -447,6 +459,9 @@
   <data name="Get a public cloud-like experience while hosting your applications in your own server." xml:space="preserve">
     <value>在自家伺服器上主機應用程式，同時享有類似公共雲端的體驗。</value>
   </data>
+  <data name="Get Started" xml:space="preserve">
+    <value>開始使用</value>
+  </data>
   <data name="Get unified endpoint management (UEM), identity management (IAM), and collaboration tools (OA) in one package. All on your local servers!" xml:space="preserve">
     <value>一站式整合終端設備管理 (UEM)、身份管理 (IAM) 及協作工具 (OA)。所有功能均安裝於您的本地伺服器！</value>
   </data>
@@ -630,6 +645,9 @@
   <data name="open-source &amp; AI era." xml:space="preserve">
     <value>開源及人工智能時代</value>
   </data>
+  <data name="Open-source &amp; AI era." xml:space="preserve">
+    <value>開源及人工智能時代</value>
+  </data>
   <data name="Open-Source Solutions" xml:space="preserve">
     <value>開源解決方案</value>
   </data>
@@ -668,6 +686,9 @@
   </data>
   <data name="Ready to build your enterprise on open-source foundations?" xml:space="preserve">
     <value>準備好以開源基礎建構企業了嗎？</value>
+  </data>
+  <data name="Ready to build your enterprise on Open-source foundations?" xml:space="preserve">
+    <value>準備好以開源基礎建設您的企業嗎？</value>
   </data>
   <data name="Recommended" xml:space="preserve">
     <value>推薦</value>
@@ -753,6 +774,9 @@
   <data name="Strengthen your business with flexible open source projects that run by Aiursoft." xml:space="preserve">
     <value>以靈活的開源專案強化您的業務，由 Aiursoft 運作。</value>
   </data>
+  <data name="Strengthen your business with flexible Open Source projects that run by Aiursoft." xml:space="preserve">
+    <value>以靈活的開源項目加強您的業務，由 Aiursoft 運行。</value>
+  </data>
   <data name="Strict Lint Rules" xml:space="preserve">
     <value>嚴格的程式碼檢查規則</value>
   </data>
@@ -783,6 +807,9 @@
   <data name="Switch easily between SQLite, MySQL, SQL Server." xml:space="preserve">
     <value>輕鬆切換 SQLite、MySQL 及 SQL Server。</value>
   </data>
+  <data name="Talk to an Architect" xml:space="preserve">
+    <value>聯絡一位架構師</value>
+  </data>
   <data name="Task Runner" xml:space="preserve">
     <value>工作執行器</value>
   </data>
@@ -798,8 +825,14 @@
   <data name="The open-source world already has the solutions you need." xml:space="preserve">
     <value>開源世界早已擁有你需要的解決方案。</value>
   </data>
+  <data name="The Open-source world already has the solutions you need." xml:space="preserve">
+    <value>開源世界早已擁有你需要的解決方案。</value>
+  </data>
   <data name="The open-source world is free, but full of dangers. Aiursoft helps you withstand the first wave of attacks." xml:space="preserve">
     <value>開源世界雖然是免費的，但充滿了危險。Aiursoft助你抵禦首波攻擊。</value>
+  </data>
+  <data name="The Open-source world is free, but full of dangers. Aiursoft helps you withstand the first wave of attacks." xml:space="preserve">
+    <value>開源世界雖然免費，但充滿危險。Aiursoft助你抵禦首波攻擊。</value>
   </data>
   <data name="The Philosophy" xml:space="preserve">
     <value>理念</value>
@@ -849,7 +882,13 @@
   <data name="Voxihost offers transparent, cost-effective cloud and generously sponsors Aiursoft&apos;s open-source work." xml:space="preserve">
     <value>Voxihost 提供透明、成本效益高的雲端服務，並慷慨資助 Aiursoft 的開源工作。</value>
   </data>
+  <data name="Voxihost offers transparent, cost-effective cloud and generously sponsors Aiursoft&apos;s Open-source work." xml:space="preserve">
+    <value>Voxihost 提供透明、高性價比的雲端服務，並慷慨資助 Aiursoft 的開源工作。</value>
+  </data>
   <data name="We audit and integrate open-source code, respect GPL, compile components, and contribute upstream." xml:space="preserve">
+    <value>我們審核及整合開源程式碼，尊重 GPL，編譯組件，並向上游貢獻。</value>
+  </data>
+  <data name="We audit and integrate Open-source code, respect GPL, compile components, and contribute upstream." xml:space="preserve">
     <value>我們審核及整合開源程式碼，尊重 GPL，編譯組件，並向上游貢獻。</value>
   </data>
   <data name="We procure Yubikeys for all clients and configure zero-trust architecture." xml:space="preserve">
